# server-with-ui

./: CMakeLists.txt  administrator.cpp  administrator.h  administrator.ui  main.cpp  message.cpp  message.h  message.ui  registrationmodal.cpp  registrationmodal.h  registrationmodal.ui  user.cpp  user.h  user.ui
